--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/refrigerator.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<!-- Set title -->
-		<title>WHATTHEFRIDGE!?</title>
+		<title>FRIDGEIT</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="hamlindigo">
